Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=46822 Avoid redundant object creation Patch provided by Anthony Whitford
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@758616 13f79535-47bb-0310-9956-ffa450edef68